Fix CSS
-  The button and text box were not vertically aligned
-  The tweet streams were not aligned without content

--- a/src/routes/TwitterSearchStream/containers/AddKeyword/style.scss
+++ b/src/routes/TwitterSearchStream/containers/AddKeyword/style.scss
@@ -1,12 +1,12 @@
 .wrapper {
   width: 80%;
-  height: 15vh;
+  line-height: 15vh;
   margin: auto;
-  padding: 50px;
   border-bottom: 2px solid purple;
 
   input[type="text"] {
     display: inline-block;
+    vertical-align: middle;
     width: 70%;
     height: 50px;
     line-height: 1;
@@ -17,6 +17,7 @@
 
   button {
     display: inline-block;
+    vertical-align: middle;
     width: 200px;
     height: 50px;
     line-height: 1;
